Fixes issue with tooltip alignment on some browsers

--- a/_includes/components/universal/Tooltip/styles.scss
+++ b/_includes/components/universal/Tooltip/styles.scss
@@ -97,6 +97,7 @@
 }
 
 .Tooltip-content {
+  left: 50%;
   margin: 40px auto;
   position: static;
   max-width: 250px;
@@ -116,6 +117,7 @@
 }
 
 .Tooltip-shadowBox {
+  left: -50%;
   position: relative;
   padding: 10px;
   border-radius: 20px;
